# statyc

./: pyproject.toml
statyc/: call_tree.py
