[tool.poetry]
name = "statyc"
version = "0.1.0"
description = ""
authors = ["'Gilad Barnea' <giladbrn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^12.5.1"
rich-click = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
